<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="company_name">Customer service</string>

    <string name="label_past_conversations">Past Conversations</string>
    <string name="label_help_me">Help me</string>
    <string name="label_connected">Connected</string>

    <string name="action_take_photo">Take a photo</string>
    <string name="action_choose_from_library">Choose from library</string>
    <string name="action_cancel">Cancel</string>

    <string name="label_type_your_message">Type your message here</string>


    <string name="app_name">ChatDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chat_atcivity">Help Chat</string>
    <string name="title_activity_archive">Archive</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_chat_cancel">Cancel</string>
    <string name="action_chat_call">Request Audio Call</string>
    <string name="action_chat_video_call">Request Video Call</string>
    <string name="action_chat_close">Close</string>
    <string name="action_chat_end">End</string>

    <string name="title_activity_image_album">ImageAlbumActivity</string>
    <string name="title_activity_detail_image">Image View</string>
    <string name="title_activity_archive_chat">Past conversation</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_archive_chat_detail_image">Image View</string>
    <string name="save_settings">Save</string>
    <string name="cancel_settings">Cancel</string>
    <string name="chat_sender_me">Me</string>
    <string name="title_activity_chat_survey">Survey</string>
    <string name="title_activity_chat_call">Call</string>

    <string name="title_activity_call">CallActivity</string>
    <string name="end_call_button">End Call</string>
    <string name="action_mute">Mute</string>
    <string name="action_unmute">Unmute</string>
    <string name="action_change_camera">Change Camera</string>
    <string name="action_disable_video">Disable Video</string>
    <string name="action_enable_video">Enable Video</string>
    <string name="action_chat_return_to_call">Return to Call</string>

    <string name="keyChatNewMessageTitle">*** KEY ***</string>

</resources>
