<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.brightpattern.chatdemo.ChatActivity" >
    <item android:id="@+id/action_chat_end"
        android:title="@string/action_chat_end"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_chat_close"
        android:title="@string/action_chat_close"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_chat_cancel"
        android:title="@string/action_chat_cancel"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_chat_return_to_call"
        android:title="@string/action_chat_return_to_call"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_chat_call"
        android:title="@string/action_chat_call"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_chat_video_call"
        android:title="@string/action_chat_video_call"
        android:orderInCategory="110"
        app:showAsAction="never" />

</menu>