<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.brightpattern.chatdemo.ChatActivity" >
    <item android:id="@+id/action_mute"
        android:title="@string/action_mute"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_unmute"
        android:title="@string/action_unmute"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_change_camera"
        android:title="@string/action_change_camera"
        android:orderInCategory="200"
        android:visible="false"
        app:showAsAction="never" />
    <item android:id="@+id/action_disable_video"
        android:title="@string/action_disable_video"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/action_enable_video"
        android:title="@string/action_enable_video"
        android:orderInCategory="300"
        app:showAsAction="never" />

</menu>