<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splashscreen"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context="com.brightpattern.chatdemo.MainActivity"
    android:baselineAligned="false"
    android:clickable="true"
    android:measureWithLargestChild="false"
    android:gravity="bottom">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/editMessage"
            android:background="#ffffff"
            android:inputType="text|textMultiLine"
            android:hint="@string/label_type_your_message"
            android:textIsSelectable="false"
            android:singleLine="false"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_marginLeft="50dp" />

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_toRightOf="@+id/editMessage">

            <ImageButton
                android:layout_width="27dp"
                android:layout_height="23dp"
                android:id="@+id/btnImage"
                android:background="@drawable/camera"
                android:onClick="addImage"
                android:layout_gravity="center" />
        </FrameLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffffff"
        android:text="@string/label_help_me"
        android:id="@+id/btnHelp"
        android:layout_gravity="center_horizontal"
        android:onClick="goChat"
        android:layout_margin="15dp"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_past_conversations"
        android:id="@+id/btnPast"
        android:layout_gravity="center_horizontal"
        android:onClick="goPast"
        android:textColor="#ffffffff"
        android:layout_marginBottom="50dp"
        android:clickable="true" />


</LinearLayout>
